--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <div class="grid"></div>
+  <body >
+    <div class="title">TETRIS</div>
+    <div class="grid-box">
+      <div class="grid"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
