--- a/index.html
+++ b/index.html
@@ -18,14 +18,22 @@
     </div>
 
 
-    <div class="score">
+    <div class="inform">
+
+      <div class="next-tetromino">
+        <h2>Next Tetromino:</h2>
+        <div id="next-tetromino-container"></div>
+      </div>
+
       <div class="score-container">
         <div class="score-title ">Score</div>
         <div class="score-value">0</div>
       </div>
     </div>
 
+    
   </div>
+  <div id="background-container"></div>
   <script src="script.js"></script>
 </body>
 
