--- a/index.html
+++ b/index.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
+  <body>
+    <div class="title">TETRIS</div>
 
-<body>
-  <div class="title">TETRIS</div>
-
-  <div class="content">
-    <div class="grid-box">
-      <div class="grid"></div>
-    </div>
-
-
-    <div class="inform">
-      <div class="buttons-container">
-        <button id="btnStart" class="styled-button">Start</button>
-        <button id="btnStop" class="styled-button">Stop</button>
-        <button id="btnReset" class="styled-button">Reset</button>
-        <button id="btnInfo" class="styled-button">Info</button>
+    <div class="content">
+      <div class="grid-box">
+        <div class="grid"></div>
       </div>
 
-      <div class="next-tetromino">
-        <h3>Next Tetromino</h3>
-        <div class="next-tetromino-grid">
+      <div class="inform">
+        <div class="buttons-container">
+          <button id="btnStart" class="styled-button">Start</button>
+          <button id="btnStop" class="styled-button">Stop</button>
+          <button id="btnReset" class="styled-button">Reset</button>
+          <button id="btnInfo" class="styled-button">Info</button>
+        </div>
+
+        <div class="next-tetromino">
+          <h3>Next Tetromino</h3>
+          <div class="next-tetromino-grid"></div>
+        </div>
+
+        <div class="score-container">
+          <div class="score-title">Score</div>
+          <div class="score-value">000000</div>
         </div>
       </div>
+    </div>
 
-      <div class="score-container">
-        <div class="score-title ">Score</div>
-        <div class="score-value">000000</div>
+    <div id="custom-modal" class="modal">
+      <div class="modal-content">
+        <p id="modal-title"></p>
+        <p id="modal-text"></p>
+        <div class="buttons">
+          <button id="btn-ok">Confirm</button>
+          <button id="btn-cancel">Cancel</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div id="custom-modal" class="modal">
-    <div class="modal-content">
-      <p id="modal-text"></p>
-      <div class="buttons">
-        <button id="btn-ok">Confirm</button>
-        <button id="btn-cancel">Cancel</button>
-      </div>
-    </div>
-  </div>
-
-  <div id="background-container"></div>
-  <script src="script.js"></script>
-</body>
-
+    <div id="background-container"></div>
+    <script src="script.js"></script>
+  </body>
 </html>
