fix/finish styled for desctop

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       </div>
     </div>
 
-    <div id="custom-modal" class="modal">
+    <!-- <div id="custom-modal" class="modal">
       <div class="modal-content">
-        <p id="modal-title"></p>
-        <p id="modal-text"></p>
+        <p class="modal-title"></p>
+        <p class="modal-text"></p>
         <div class="buttons">
-          <button id="btn-ok">Confirm</button>
-          <button id="btn-cancel">Cancel</button>
+          <button class="btn-ok">Confirm</button>
+          <button class="btn-cancel">Cancel</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="background-container"></div>
     <script src="script.js"></script>
